--- a/board.html
+++ b/board.html
@@ -21,7 +21,7 @@
     <div class="board">
       <h1>Board</h1>
       <div>
-        <button class="add-task" id="add-task-Btn-id">
+        <button class="add-task" id="add-task-Btn-id" onclick="openAddTaskOverlay()">
           <img src="./assets/img/add_task_board.png" alt="add task" />
         </button>
       </div>
@@ -34,7 +34,7 @@
         <div class="board-box">
           <h2>To do</h2>
           <div>
-            <button class="add-task-2" id="add-task-Btn-id">
+            <button class="add-task-2" id="add-task-Btn-id" onclick="openAddTaskOverlay()">
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
@@ -45,7 +45,7 @@
         <div class="board-box">
           <h2>In progress</h2>
           <div>
-            <button class="add-task-2" id="add-task-Btn-id">
+            <button class="add-task-2" id="add-task-Btn-id" onclick="openAddTaskOverlay()">
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
@@ -56,7 +56,7 @@
         <div class="board-box">
           <h2>Await feedback</h2>
           <div>
-            <button class="add-task-2" id="add-task-Btn-id">
+            <button class="add-task-2" id="add-task-Btn-id" onclick="openAddTaskOverlay()">
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
@@ -67,7 +67,7 @@
         <div class="board-box">
           <h2>Done</h2>
           <div>
-            <button class="add-task-2" id="add-task-Btn-id">
+            <button class="add-task-2" id="add-task-Btn-id" onclick="openAddTaskOverlay()">
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
