starting to render board tasks

--- a/board.html
+++ b/board.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="/css/board/board.css" />
     <link rel="stylesheet" href="/css/board/board_card.css" />
     <link rel="stylesheet" href="/css/add_task/add_task.css" />
-    <script src="/js/global.js"></script>
-    <script src="/js/includeHTML.js"></script>
-    <script src="/js/board/board.js"></script>
-    <script src="/js/board/board_assets.js"></script>
-    <script src="/js/add_task/add_task.js"></script>
+    <script defer src="/js/global.js"></script>
+    <script defer src="/js/includeHTML.js"></script>
+    <script defer src="/js/board/board.js"></script>
+    <script defer src="/js/board/board_assets.js"></script>
+    <script defer src="/js/add_task/add_task.js"></script>
     <title>Board</title>
   </head>
   <body id="board-body-id" class="d-none" onload="includeHTML().then(() => initBoard())">
@@ -38,7 +38,13 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area" id="to-do-id" ondrop="moveTo('toDo')" ondragover="allowDrop(event)">No tasks To do</div>
+          <div
+            class="drag-area"
+            id="to-do-id"
+            ondrop="moveTo('toDo')"
+            ondragover="allowDrop(event)">
+            No tasks To do
+          </div>
         </div>
       </div>
       <div>
@@ -49,7 +55,13 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area" id="in-progress-id" ondrop="moveTo('inProgress')" ondragover="allowDrop(event)">No tasks To do</div>
+          <div
+            class="drag-area"
+            id="in-progress-id"
+            ondrop="moveTo('inProgress')"
+            ondragover="allowDrop(event)">
+            No tasks To do
+          </div>
         </div>
       </div>
       <div>
@@ -60,7 +72,13 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area" id="await-feedback-id" ondrop="moveTo('awaitFeedback')" ondragover="allowDrop(event)">No tasks To do</div>
+          <div
+            class="drag-area"
+            id="await-feedback-id"
+            ondrop="moveTo('awaitFeedback')"
+            ondragover="allowDrop(event)">
+            No tasks To do
+          </div>
         </div>
       </div>
       <div>
@@ -71,7 +89,9 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area" id="done-id" ondrop="moveTo('done')" ondragover="allowDrop(event)">No tasks To do</div>
+          <div class="drag-area" id="done-id" ondrop="moveTo('done')" ondragover="allowDrop(event)">
+            No tasks To do
+          </div>
         </div>
       </div>
     </div>
