--- a/board.html
+++ b/board.html
@@ -89,7 +89,11 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area" id="done-id" ondrop="moveTo('done')" ondragover="allowDrop(event)">
+          <div 
+          class="drag-area" 
+          id="done-id" 
+          ondrop="moveTo('done')" 
+          ondragover="allowDrop(event)">
             No tasks To do
           </div>
         </div>
