better tooltip svg

--- a/error_page.html
+++ b/error_page.html
@@ -14,7 +14,7 @@
   <body>
     <section>
       <div class="container">
-        <div class="content">
+        <div class="content error-page">
           <span>Oops! You are not logged in.</span>
           <span
             >Please <a href="./index.html"><strong>log in</strong></a> <span>&#128274;</span> to
