better join  styling

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -11,7 +11,7 @@
     <script defer src="./js/global.js"></script>
     <title>Legal Notice</title>
   </head>
-  <body onload="legalsInit();">
+  <body id="legal-id" onload="legalsInit(event);">
     <header id="header-id" class="header"></header>
     <section class="legal-style">
       <div class="legal-back-arrow" onclick="goBack()">
