--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -11,7 +11,7 @@
     <script defer src="./js/global.js"></script>
     <title>Privacy Policy</title>
   </head>
-  <body onload="legalsInit();">
+  <body id="policy-id" onload="legalsInit(event);">
     <header id="header-id" class="header"></header>
     <section class="policy-style">
       <div class="policy-notice-content">
