better join  styling

--- a/add_task.html
+++ b/add_task.html
@@ -89,9 +89,10 @@
             <div id="assignedto-container-id" class="input_global input_at cursor">
               <input
                 id="assignedto-input-id"
+                type="text"
                 placeholder="Select contacts to assign"
                 onclick="toggleAssignedToSection(false)"
-                autocomplete="off" />
+                autocomplete="on" />
               <img
                 id="rotate-arrow-id"
                 class="rotate-arrow"
