--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/register/register_style.css" />
+    <link rel="stylesheet" href="./css/register/register_media.css" />
     <script defer src="./js/register/register.js"></script>
     <script defer src="./js/template.js"></script>
     <script defer src="./js/legal_docs/legal_docs.js"></script>
