better board styling

--- a/board.html
+++ b/board.html
@@ -57,7 +57,7 @@
               fill="#2A3647" />
           </svg>
         </div>
-        <div>
+        <div class="board-content-wrapper">
           <div class="board-box">
             <h2>To do</h2>
             <div>
@@ -73,8 +73,7 @@
               No tasks To do
             </div>
           </div>
-        </div>
-        <div>
+
           <div class="board-box">
             <h2>In progress</h2>
             <div>
@@ -90,8 +89,7 @@
               No tasks To do
             </div>
           </div>
-        </div>
-        <div>
+
           <div class="board-box">
             <h2>Await feedback</h2>
             <div>
@@ -107,8 +105,7 @@
               No tasks To do
             </div>
           </div>
-        </div>
-        <div>
+
           <div class="board-box">
             <h2>Done</h2>
             <div>
