bug fixing add task

--- a/add_task.html
+++ b/add_task.html
@@ -82,7 +82,9 @@
             </div>
           </div>
         </div>
-        <div class="vertical-bar"></div>
+        <div class="vertical-bar-container">
+          <div class="vertical-bar"></div>
+        </div>
         <div class="content-bottom-and-rigth">
           <div>
             <div id="at-label-id" class="at-label-style at-asignedTo">Assigned to</div>
