add task error msg included

--- a/add_task.html
+++ b/add_task.html
@@ -127,7 +127,11 @@
                 onclick="togglePrioImg('low-default-id')" />
             </div>
           </div>
+
           <div class="at-subtasks">
+            <span id="subtask-err-msg-id" class="subtask-err-msg d-none"
+              >Finish all subtasks first.
+            </span>
             <div class="at-label-style">Subtasks</div>
             <div class="input_global input_at cursor">
               <input
