included loader  in  board.html

--- a/board.html
+++ b/board.html
@@ -124,6 +124,7 @@
         </div>
       </div>
     </div>
+    <div id="loader-id" class="loader d-none"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </body>
 </html>
