--- a/board.html
+++ b/board.html
@@ -25,7 +25,7 @@
           <h1>Board</h1>
           <div class="board-headline-right">
             <div class="input_global board-search-desktop">
-              <input type="search" placeholder="Find Task" autocomplete="on" onkeydown="filter()"/>
+              <input id="search" type="text" placeholder="Find Task" autocomplete="on" onkeydown="filterToDos()"/>
               <div class="add-task"></div>
               <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
