--- a/summary.html
+++ b/summary.html
@@ -52,7 +52,7 @@
                     </svg>
                     <div>
                       <div class="summary-change-content">
-                        <span>1</span>
+                        <span id="to-do-amount-id"></span>
                         <span>To-do</span>
                       </div>
                     </div>
@@ -150,7 +150,7 @@
                   <div class="tasks-info hover-right">
                     <span>1</span>
                     <span
-                      >Tasks in<br />
+                      >Awaiting<br />
                       feedback</span
                     >
                   </div>
