--- a/board.html
+++ b/board.html
@@ -27,7 +27,7 @@
             <div class="input_global board-search-desktop">
               <input
                 id="search-desktop-id"
-                type="text"
+                type="search"
                 placeholder="Find Task"
                 autocomplete="on"
                 onkeydown="filterToDos()" />
@@ -56,7 +56,7 @@
         <div class="input_global board-search-mobile">
           <input
             id="search-mobile-id"
-            type="text"
+            type="search"
             placeholder="Find Task"
             autocomplete="on"
             onkeydown="filterToDos()" />
