--- a/summary.html
+++ b/summary.html
@@ -52,7 +52,7 @@
                     </svg>
                     <div>
                       <div class="summary-change-content">
-                        <span id="to-do-amount-id"></span>
+                        <span id="to-do-amount-id">0</span>
                         <span>To-do</span>
                       </div>
                     </div>
