--- a/board.html
+++ b/board.html
@@ -30,7 +30,7 @@
                 type="search"
                 placeholder="Find Task"
                 autocomplete="on"
-                onkeydown="filterToDos()" />
+                oninput="filterToDos()" />
               <div class="add-task"></div>
               <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -59,7 +59,7 @@
             type="search"
             placeholder="Find Task"
             autocomplete="on"
-            onkeydown="filterToDos()" />
+            oninput="filterToDos()" />
           <div class="add-task"></div>
           <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
