summary board  info  ready

--- a/summary.html
+++ b/summary.html
@@ -76,7 +76,7 @@
                     </svg>
                     <div>
                       <div class="summary-change-content">
-                        <span>1</span>
+                        <span id="done-amount-id">0</span>
                         <span>Done</span>
                       </div>
                     </div>
@@ -115,14 +115,14 @@
 
                     <div>
                       <div class="summary-change-content">
-                        <span>1</span>
+                        <span id="urgent-id">0</span>
                         <span>Urgent</span>
                       </div>
                     </div>
                   </a>
                   <div class="separator2"></div>
                   <div class="summary-info">
-                    <span>February 29, 2022</span>
+                    <span id="upcomming-date-id">Currently, there is no</span>
                     <span>Upcomming deadline</span>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
               <div class="summary-row bottom-section">
                 <div class="bottom-hover-container">
                   <div class="tasks-info hover-left">
-                    <span>1</span>
+                    <span id="total-tasks-id">0</span>
                     <span
                       >Tasks in<br />
                       Board</span
@@ -139,7 +139,7 @@
                 </div>
                 <div class="bottom-hover-container">
                   <div class="tasks-info hover-middle">
-                    <span>1</span>
+                    <span id="inProgress-id">0</span>
                     <span
                       >Tasks in<br />
                       Progress</span
@@ -148,7 +148,7 @@
                 </div>
                 <div class="bottom-hover-container">
                   <div class="tasks-info hover-right">
-                    <span>1</span>
+                    <span id="awaitingFeedback-id">0</span>
                     <span
                       >Awaiting<br />
                       feedback</span
