--- a/board.html
+++ b/board.html
@@ -69,8 +69,8 @@
         </div>
         <div class="board-content-wrapper">
           <div class="board-box">
-            <h2>To do</h2>
-            <div>
+            <div class="board-header">
+              <h2>To do</h2>
               <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
@@ -85,8 +85,8 @@
             </div>
           </div>
           <div class="board-box">
-            <h2>In progress</h2>
-            <div>
+            <div class="board-header">
+              <h2>In progress</h2>
               <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
@@ -102,8 +102,8 @@
           </div>
 
           <div class="board-box">
-            <h2>Await feedback</h2>
-            <div>
+            <div class="board-header">
+              <h2>Await feedback</h2>
               <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
