board desktop  styling

--- a/summary.html
+++ b/summary.html
@@ -34,7 +34,7 @@
             </div>
             <div class="summary-overview">
               <div class="summary-row top-section">
-                <div class="top-hover-container">
+                <div class="top-hover-container" onclick="redirectToBoard()">
                   <a class="box-1 top top-left">
                     <svg
                       width="40"
@@ -58,7 +58,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="top-hover-container">
+                <div class="top-hover-container" onclick="redirectToBoard()">
                   <a class="box-1 top top-right">
                     <svg
                       width="40"
@@ -84,7 +84,7 @@
                 </div>
               </div>
 
-              <div class="middle-hover-container">
+              <div class="middle-hover-container" onclick="redirectToBoard()">
                 <div class="summary-row middle-section">
                   <a class="middle-box">
                     <svg
@@ -128,7 +128,7 @@
                 </div>
               </div>
               <div class="summary-row bottom-section">
-                <div class="bottom-hover-container">
+                <div class="bottom-hover-container" onclick="redirectToBoard()">
                   <div class="tasks-info hover-left">
                     <span id="total-tasks-id">0</span>
                     <span
@@ -137,7 +137,7 @@
                     >
                   </div>
                 </div>
-                <div class="bottom-hover-container">
+                <div class="bottom-hover-container" onclick="redirectToBoard()">
                   <div class="tasks-info hover-middle">
                     <span id="inProgress-id">0</span>
                     <span
@@ -146,7 +146,7 @@
                     >
                   </div>
                 </div>
-                <div class="bottom-hover-container">
+                <div class="bottom-hover-container" onclick="redirectToBoard()">
                   <div class="tasks-info hover-right">
                     <span id="awaitingFeedback-id">0</span>
                     <span
