board add task  styling

--- a/board.html
+++ b/board.html
@@ -41,7 +41,7 @@
                   fill="#2A3647" />
               </svg>
             </div>
-            <button class="filled-btn board-at-btn">
+            <button class="filled-btn board-at-btn" onclick="openAddTaskOverlay()">
               <span>Add Task</span>
               <svg
                 width="22"
@@ -74,7 +74,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>To do</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
+              <button class="add-task-2">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
@@ -90,7 +90,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>In progress</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
+              <button class="add-task-2">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
@@ -107,7 +107,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>Await feedback</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
+              <button class="add-task-2">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
