board add task fully  widh and hight responsive

--- a/board.html
+++ b/board.html
@@ -17,6 +17,7 @@
     <script defer src="/js/board/board.js"></script>
     <script defer src="./js/template.js"></script>
     <script defer src="/js/board/board_assets.js"></script>
+    <script defer src="/js/board/board_add_task_overlay.js"></script>
     <script defer src="/js/add_task/add_task.js"></script>
     <title>Board</title>
   </head>
