--- a/board.html
+++ b/board.html
@@ -75,7 +75,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>To do</h2>
-              <button class="add-task-2">
+              <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
@@ -91,7 +91,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>In progress</h2>
-              <button class="add-task-2">
+              <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
@@ -108,7 +108,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>Await feedback</h2>
-              <button class="add-task-2">
+              <button class="add-task-2" onclick="openAddTaskOverlay()">
                 <img src="./assets/img/add_task_board_2.png" alt="add task" />
               </button>
             </div>
