board sending tasks works

--- a/add_task.html
+++ b/add_task.html
@@ -216,10 +216,7 @@
             </div>
             <div id="at-date-border-id" class="input_global due_date_at">
               <input id="date-input-id" type="date" max="2025-12-31" min="2024-02-27" />
-              <img
-                class="event-style"
-                src="./assets/img/event.png"
-                onclick="openAssignedbyArrow()" />
+              <img class="event-style" src="./assets/img/event.png" />
             </div>
           </div>
         </div>
