--- a/board.html
+++ b/board.html
@@ -84,7 +84,7 @@
               id="toDo-hover-id"
               ondrop="moveTo('toDo')"
               ondragover="allowDrop(event)">
-              <div class="drag-area" id="to-do-id"></div>
+              <div class="drag-area" id="toDo-id"></div>
             </div>
           </div>
           <div id="inProgress-box-id" class="board-box">
@@ -99,7 +99,7 @@
               id="inProgress-hover-id"
               ondrop="moveTo('inProgress')"
               ondragover="allowDrop(event)">
-              <div class="drag-area" id="in-progress-id"></div>
+              <div class="drag-area" id="inProgress-id"></div>
             </div>
           </div>
 
@@ -115,7 +115,7 @@
               id="awaitFeedback-hover-id"
               ondrop="moveTo('awaitFeedback')"
               ondragover="allowDrop(event)">
-              <div class="drag-area" id="await-feedback-id"></div>
+              <div class="drag-area" id="awaitFeedback-id"></div>
             </div>
           </div>
 
