--- a/board.html
+++ b/board.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/board/board.css" />
-    <link rel="stylesheet" href="/css/board/board_card.css" />
-    <link rel="stylesheet" href="/css/board/board_media.css" />
-    <link rel="stylesheet" href="/css/board/board_add_task_overlay.css" />
-    <link rel="stylesheet" href="/css/add_task/add_task.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/board/board.css" />
+    <link rel="stylesheet" href="./css/board/board_card.css" />
+    <link rel="stylesheet" href="./css/board/board_media.css" />
+    <link rel="stylesheet" href="./css/board/board_add_task_overlay.css" />
+    <link rel="stylesheet" href="./css/add_task/add_task.css" />
     <link rel="stylesheet" href="./css/add_task/add_task_media.css" />
-    <script defer src="/js/global.js"></script>
-    <script defer src="/js/includeHTML.js"></script>
-    <script defer src="/js/board/board.js"></script>
+    <link rel="stylesheet" href="./css/board/board_card_info.css" />
+    <script defer src="./js/global.js"></script>
+    <script defer src="./js/includeHTML.js"></script>
+    <script defer src="./js/board/board.js"></script>
     <script defer src="./js/template.js"></script>
-    <script defer src="/js/board/board_assets.js"></script>
-    <script defer src="/js/board/board_add_task_overlay.js"></script>
-    <script defer src="/js/add_task/add_task.js"></script>
+    <script defer src="./js/board/board_assets.js"></script>
+    <script defer src="./js/board/board_add_task_overlay.js"></script>
+    <script defer src="./js/add_task/add_task.js"></script>
     <title>Board</title>
   </head>
   <body id="board-body-id" class="d-none" onload="includeHTML().then(() => initBoard())">
@@ -133,7 +134,8 @@
       </div>
     </div>
     <div id="loader-id" class="loader d-none"></div>
-    <div id="board-at-id" class="d-none board-at-overlay"></div>
+    <div id="board-at-id" class="d-none board-overlay"></div>
+    <div id="board-card-info-id" class="d-none board-overlay"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </body>
 </html>
