added user feedback  effects on  board card overlay

--- a/board.html
+++ b/board.html
@@ -135,7 +135,7 @@
     </div>
     <div id="loader-id" class="loader d-none"></div>
     <div id="board-at-id" class="d-none board-overlay"></div>
-    <div id="board-card-info-id" class="d-none board-overlay"></div>
+    <div id="board-card-info-id" class="d-none board-info-overlay"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </body>
 </html>
