--- a/board.html
+++ b/board.html
@@ -37,11 +37,13 @@
                 autocomplete="on"
                 oninput="filterToDos()" />
               <div class="add-task"></div>
-              <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
-                  fill="#2A3647" />
-              </svg>
+              <div class="magnifier-container">
+                <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
+                    fill="#2A3647" />
+                </svg>
+              </div>
             </div>
             <button class="filled-btn board-at-btn" onclick="openAddTaskOverlay()">
               <span>Add Task</span>
@@ -66,19 +68,45 @@
             autocomplete="on"
             oninput="filterToDos()" />
           <div class="add-task"></div>
-          <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
-              fill="#2A3647" />
-          </svg>
+          <div class="magnifier-container">
+            <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
+                fill="#2A3647" />
+            </svg>
+          </div>
         </div>
         <div id="toDo-box-id" class="board-content-wrapper">
           <div class="board-box">
             <div class="board-header">
               <h2>To do</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
-                <img src="./assets/img/add_task_board_2.png" alt="add task" />
-              </button>
+              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+                <svg
+                  width="25"
+                  height="25"
+                  viewBox="0 0 25 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    x="1.33325"
+                    y="1.5"
+                    width="22"
+                    height="22"
+                    rx="7"
+                    stroke="#2A3647"
+                    stroke-width="2" />
+                  <path
+                    d="M12.3333 8.5V16.5"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                  <path
+                    d="M16.3333 12.5754L8.33325 12.5754"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                </svg>
+              </div>
             </div>
             <div
               class="drag-container"
@@ -91,9 +119,33 @@
           <div id="inProgress-box-id" class="board-box">
             <div class="board-header">
               <h2>In progress</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
-                <img src="./assets/img/add_task_board_2.png" alt="add task" />
-              </button>
+              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+                <svg
+                  width="25"
+                  height="25"
+                  viewBox="0 0 25 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    x="1.33325"
+                    y="1.5"
+                    width="22"
+                    height="22"
+                    rx="7"
+                    stroke="#2A3647"
+                    stroke-width="2" />
+                  <path
+                    d="M12.3333 8.5V16.5"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                  <path
+                    d="M16.3333 12.5754L8.33325 12.5754"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                </svg>
+              </div>
             </div>
             <div
               class="drag-container"
@@ -107,9 +159,33 @@
           <div id="await-feedback-box-id" class="board-box">
             <div class="board-header">
               <h2>Await feedback</h2>
-              <button class="add-task-2" onclick="openAddTaskOverlay()">
-                <img src="./assets/img/add_task_board_2.png" alt="add task" />
-              </button>
+              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+                <svg
+                  width="25"
+                  height="25"
+                  viewBox="0 0 25 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    x="1.33325"
+                    y="1.5"
+                    width="22"
+                    height="22"
+                    rx="7"
+                    stroke="#2A3647"
+                    stroke-width="2" />
+                  <path
+                    d="M12.3333 8.5V16.5"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                  <path
+                    d="M16.3333 12.5754L8.33325 12.5754"
+                    stroke="#2A3647"
+                    stroke-width="2"
+                    stroke-linecap="round" />
+                </svg>
+              </div>
             </div>
             <div
               class="drag-container"
