--- a/board.html
+++ b/board.html
@@ -45,7 +45,7 @@
                 </svg>
               </div>
             </div>
-            <button class="filled-btn board-at-btn" onclick="openAddTaskOverlay()">
+            <button class="filled-btn board-at-btn" onclick="openAddTaskOverlay('toDo')">
               <span>Add Task</span>
               <svg
                 width="22"
@@ -80,7 +80,7 @@
           <div class="board-box">
             <div class="board-header">
               <h2>To do</h2>
-              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+              <div class="board-plus-btn" onclick="openAddTaskOverlay('toDo')">
                 <svg
                   width="25"
                   height="25"
@@ -119,7 +119,7 @@
           <div id="inProgress-box-id" class="board-box">
             <div class="board-header">
               <h2>In progress</h2>
-              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+              <div class="board-plus-btn" onclick="openAddTaskOverlay('inProgress')">
                 <svg
                   width="25"
                   height="25"
@@ -159,7 +159,7 @@
           <div id="await-feedback-box-id" class="board-box">
             <div class="board-header">
               <h2>Await feedback</h2>
-              <div class="board-plus-btn" onclick="openAddTaskOverlay()">
+              <div class="board-plus-btn" onclick="openAddTaskOverlay('awaitFeedback')">
                 <svg
                   width="25"
                   height="25"
