--- a/board.html
+++ b/board.html
@@ -197,7 +197,9 @@
           </div>
 
           <div id="done-box-id" class="board-box">
-            <h2>Done</h2>
+            <div class="board-header">
+              <h2>Done</h2>
+            </div>
             <div
               class="drag-container"
               id="done-hover-id"
