--- a/add_task.html
+++ b/add_task.html
@@ -155,7 +155,7 @@
                     fill="#2A3647" />
                 </svg>
               </div>
-              <div id="subtask-del-and-confim-id" class="subtasks-decision-img d-none">
+              <div id="subtask-del-and-confirm-id" class="subtasks-decision-img d-none">
                 <svg
                   onclick="deleteOrAddTaskMenu(true)"
                   width="24"
@@ -257,7 +257,7 @@
                 stroke-linejoin="round" />
             </svg>
           </button>
-          <button id="ad-add-btn" class="filled-btn" onclick="createTask()">
+          <button id="ad-add-btn" class="filled-btn" onclick="createTask('toDo')">
             Create Task
             <img src="./assets/img/check.png" alt="" />
           </button>
