added mobile greeting  animation

--- a/summary.html
+++ b/summary.html
@@ -161,7 +161,7 @@
         </div>
       </div>
     </section>
-
+    <div id="summary-greeting-id" class="summary-greeting-overlay"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </body>
 </html>
