trying to fix boad cards render bug

--- a/board.html
+++ b/board.html
@@ -19,7 +19,8 @@
     <script defer src="./js/template.js"></script>
     <script defer src="./js/board/board_assets.js"></script>
     <script defer src="./js/board/board_add_task_overlay.js"></script>
-    <script defer src="./js/add_task/add_task.js"></script>
+    <script defer src="./js/board/board_add_task.js"></script>
+    <!-- <script defer src="./js/add_task/add_task.js"></script> -->
     <title>Board</title>
   </head>
   <body id="board-body-id" class="d-none" onload="includeHTML().then(() => initBoard())">
