bord Card render bug is hopefully fixed

--- a/add_task.html
+++ b/add_task.html
@@ -94,7 +94,7 @@
                 type="text"
                 placeholder="Select contacts to assign"
                 onclick="toggleAssignedToSection(false)"
-                autocomplete="on" />
+                autocomplete="off" />
               <img
                 id="rotate-arrow-id"
                 class="rotate-arrow"
